Moved to interface project

--- a/src/ESFA.DC.JobStatus/ESFA.DC.JobStatus.csproj
+++ b/src/ESFA.DC.JobStatus/ESFA.DC.JobStatus.csproj
@@ -24,6 +24,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ESFA.DC.JobStatus.Interface" Version="0.1.0-beta0001" />
     <PackageReference Include="ESFA.DC.Queueing.Interface" Version="0.1.5-beta0001" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
       <PrivateAssets>all</PrivateAssets>
@@ -32,7 +33,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ESFA.DC.JobStatus.Dto\ESFA.DC.JobStatus.Dto.csproj" />
-    <ProjectReference Include="..\ESFA.DC.JobStatus.Interface\ESFA.DC.JobStatus.Interface.csproj" />
   </ItemGroup>
 
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
