Edited project files to remove dependency on dto project in nuget package

--- a/src/ESFA.DC.JobStatus/ESFA.DC.JobStatus.csproj
+++ b/src/ESFA.DC.JobStatus/ESFA.DC.JobStatus.csproj
@@ -32,7 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ESFA.DC.JobStatus.Dto\ESFA.DC.JobStatus.Dto.csproj" />
+    <ProjectReference Include="..\ESFA.DC.JobStatus.Dto\ESFA.DC.JobStatus.Dto.csproj">
+      <PrivateAssets>all</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
 
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
