--- a/src/ESFA.DC.JobStatus.WebServiceCall.Service/ESFA.DC.JobStatus.WebServiceCall.Service.csproj
+++ b/src/ESFA.DC.JobStatus.WebServiceCall.Service/ESFA.DC.JobStatus.WebServiceCall.Service.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="ESFA.DC.JobStatus.Interface" Version="0.1.4-beta0001" />
     <PackageReference Include="ESFA.DC.Logging" Version="0.1.1-beta0001" />
     <PackageReference Include="ESFA.DC.Queueing.Interface" Version="0.1.8-beta0001" />
+    <PackageReference Include="ESFA.DC.Serialization.Interfaces" Version="0.1.4-beta0001" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
